--- a/calculator.html
+++ b/calculator.html
@@ -64,7 +64,7 @@
             </div>
             <div class="col-lg-8 col-md-8 col-12 float-right">
                 Made by: <a href="https://github.com/mj-this-side" target="_blank">mj-this-side</a>
-                <h3 style="margin-left:10px">Contact Me:</h3><br />
+                <h3 style="margin-left:10px">Contact Me</h3><br />
                 <a href="https://www.facebook.com/" target="_blank"><i style="padding: 8px;"
                         class="fab fa-facebook fa-2x" id="fb"></i></a>
                 <a href="https://www.linkedin.com/in/harsh-saxena-8a9429178/" target="_blank"><i style="padding: 8px;"
